src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_6x6__check_classic_6x6_1_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 3
  areas:
    - Row: 3
    - Column: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 4
  areas:
    - Row: 3
    - Column: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 0
  values:
    - 4
  areas:
    - Region: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 3
  areas:
    - Region: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 3
  areas:
    - Row: 4
    - Column: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 2
  areas:
    - Row: 5
    - Column: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 3
    - row: 2
      col: 1
    - row: 1
      col: 0
    - row: 3
      col: 4
    - row: 4
      col: 5
  values:
    - 1
  areas:
    - Row: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 5
    - row: 2
      col: 2
    - row: 3
      col: 3
    - row: 4
      col: 4
  values:
    - 2
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 2
    - row: 2
      col: 1
    - row: 4
      col: 5
  values:
    - 1
  areas:
    - Row: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 1
    - row: 4
      col: 4
    - row: 5
      col: 0
  values:
    - 2
  areas:
    - Column: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 4
    - row: 2
      col: 3
  values:
    - 5
  areas:
    - Region: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 4
  areas:
    - Row: 0
    - Column: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 5
  areas:
    - Column: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 6
  areas:
    - Row: 1
    - Column: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 6
  areas:
    - Row: 5
    - Column: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 3
  areas:
    - Row: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 3
  areas:
    - Region: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 5
  areas:
    - Column: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 4
  areas:
    - Row: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 5
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 4
  areas:
    - Region: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 6
  areas:
    - Column: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
