src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_6x6__check_classic_6x6_2_hard_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 3
  areas:
    - Row: 4
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 0
  values:
    - 1
  areas:
    - Row: 0
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 2
  areas:
    - Row: 5
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 4
    - row: 0
      col: 5
    - row: 4
      col: 3
  values:
    - 2
  areas:
    - Column: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 4
    - row: 0
      col: 0
    - row: 4
      col: 2
    - row: 5
      col: 5
  values:
    - 1
  areas:
    - Column: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 3
    - row: 0
      col: 2
    - row: 2
      col: 5
  values:
    - 5
  areas:
    - Row: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  grid: ~
  candidates:
    - - []
      - - 3
        - 4
      - []
      - - 3
        - 4
        - 6
      - - 3
        - 6
      - []
    - - []
      - - 2
        - 3
        - 4
      - - 2
        - 3
        - 4
      - []
      - []
      - - 3
        - 4
    - - []
      - - 1
        - 3
        - 6
      - - 3
        - 6
      - - 1
        - 3
        - 6
      - []
      - []
    - - []
      - - 1
        - 2
        - 3
        - 6
      - - 2
        - 3
        - 6
      - - 1
        - 3
        - 6
      - []
      - - 3
        - 6
    - - []
      - - 4
        - 5
        - 6
      - []
      - []
      - - 5
        - 6
      - - 4
        - 6
    - - []
      - - 4
        - 5
        - 6
      - - 4
        - 6
      - - 3
        - 4
        - 6
      - - 3
        - 5
        - 6
      - []
  invalidStateReason: ~
- rule: XYWing
  cells:
    - row: 1
      col: 5
    - row: 0
      col: 4
    - row: 4
      col: 5
  values:
    - 3
    - 4
    - 6
  areas: []
  affectedCells:
    - row: 4
      col: 4
    - row: 5
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 4
  values:
    - 5
  areas: []
  affectedCells:
    - row: 4
      col: 1
    - row: 5
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 3
  areas: []
  affectedCells:
    - row: 5
      col: 3
    - row: 0
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 6
  areas: []
  affectedCells:
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 1
  values:
    - 5
  areas:
    - Row: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: TurbotFish
  cells:
    - row: 0
      col: 3
    - row: 0
      col: 1
    - row: 1
      col: 5
    - row: 3
      col: 5
  values:
    - 3
  areas:
    - Row: 0
    - Column: 5
  affectedCells:
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: TurbotFish
  cells:
    - row: 0
      col: 1
    - row: 0
      col: 3
    - row: 4
      col: 1
    - row: 4
      col: 5
  values:
    - 4
  areas:
    - Row: 0
    - Row: 4
  affectedCells:
    - row: 1
      col: 5
    - row: 5
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 3
  areas: []
  affectedCells:
    - row: 1
      col: 1
    - row: 1
      col: 2
    - row: 3
      col: 5
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 6
  areas: []
  affectedCells:
    - row: 5
      col: 2
    - row: 2
      col: 3
    - row: 3
      col: 3
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 4
  areas: []
  affectedCells:
    - row: 0
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 6
  areas: []
  affectedCells:
    - row: 3
      col: 1
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 4
  areas: []
  affectedCells:
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 4
  areas: []
  affectedCells:
    - row: 1
      col: 2
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 3
  areas: []
  affectedCells:
    - row: 2
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 2
  areas: []
  affectedCells:
    - row: 1
      col: 1
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 6
  areas: []
  affectedCells:
    - row: 2
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 4
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 1
  areas: []
  affectedCells:
    - row: 2
      col: 3
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 2
  values:
    - 3
  areas: []
  affectedCells:
    - row: 3
      col: 3
    - row: 2
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 6
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 2
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 1
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
