src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_6x6__check_classic_6x6_3_hard_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 5
  areas:
    - Row: 2
    - Column: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 6
  areas:
    - Row: 2
    - Region: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 2
  areas:
    - Row: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 3
  areas:
    - Region: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 1
    - row: 2
      col: 0
    - row: 5
      col: 2
    - row: 0
      col: 3
  values:
    - 1
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 4
    - row: 4
      col: 0
    - row: 0
      col: 2
    - row: 3
      col: 3
  values:
    - 2
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 4
    - row: 5
      col: 2
    - row: 0
      col: 3
    - row: 3
      col: 5
  values:
    - 1
  areas:
    - Row: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 0
    - row: 1
      col: 5
    - row: 5
      col: 3
  values:
    - 6
  areas:
    - Column: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 5
    - row: 0
      col: 2
    - row: 4
      col: 0
  values:
    - 2
  areas:
    - Column: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 2
    - row: 3
      col: 0
    - row: 2
      col: 3
  values:
    - 5
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  candidates:
    - - []
      - - 3
        - 4
      - []
      - []
      - - 4
        - 5
      - - 3
        - 5
    - - - 3
        - 4
      - []
      - []
      - - 3
        - 4
      - []
      - []
    - - []
      - []
      - []
      - []
      - []
      - []
    - - []
      - - 4
        - 6
      - - 4
        - 6
      - []
      - []
      - []
    - - []
      - - 3
        - 4
        - 5
        - 6
      - - 4
        - 6
      - - 3
        - 4
      - []
      - - 3
        - 5
    - - - 3
        - 4
      - - 3
        - 4
        - 5
      - []
      - []
      - - 4
        - 5
      - []
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 5
      col: 0
    - row: 5
      col: 1
  values:
    - 3
  areas:
    - Row: 5
    - Region: 4
  affectedCells:
    - row: 4
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: TurbotFish
  cells:
    - row: 0
      col: 1
    - row: 0
      col: 4
    - row: 1
      col: 0
    - row: 5
      col: 0
  values:
    - 4
  areas:
    - Row: 0
    - Column: 0
  affectedCells:
    - row: 5
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 5
  areas: []
  affectedCells:
    - row: 5
      col: 1
    - row: 0
      col: 4
    - row: 4
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 4
  areas: []
  affectedCells:
    - row: 0
      col: 1
    - row: 1
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 3
  areas: []
  affectedCells:
    - row: 4
      col: 3
    - row: 0
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 3
  areas: []
  affectedCells:
    - row: 5
      col: 1
    - row: 1
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 3
  areas: []
  affectedCells:
    - row: 1
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 4
  areas: []
  affectedCells:
    - row: 4
      col: 1
    - row: 4
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 4
  areas: []
  affectedCells:
    - row: 5
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 6
  areas: []
  affectedCells:
    - row: 4
      col: 1
    - row: 3
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 4
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 3
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 6
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 2
  values:
    - 4
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 3
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
